# MessagingAPI-SDK-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE-OF-CONDUCT.md  DockerFile  LICENSE  README.md  TestRunner.ps1  TestRunner.sh  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py
.github/:  dependabot.yml
Telstra_Messaging/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
back_compat_test/: DockerFile  docker-compose.yml  test.py
docs/: AuthApi.md  AuthenticationApi.md  AuthgeneratetokenpostResponse.md  DeleteNumberRequest.md  ErrorError.md  ErrorErrorError.md  ErrorErrorError62.md  ErrorErrorErrorError.md  GetMmsResponse.md  GetSubscriptionResponse.md  HealthCheckResponse.md  InboundPollResponse.md  MMSContent.md  Message.md  MessageMulti.md  MessageSentResponse.md  MessageSentResponseMms.md  MessageSentResponseSms.md  MessageType.md  MessagingApi.md  OAuthRequest.md  OAuthResponse.md  OutboundPollResponse.md  OutboundPollResponseInner.md  ProvisionNumberRequest.md  ProvisionNumberResponse.md  ProvisioningApi.md  SendMmsRequest.md  SendMmsRequestMMSContent.md  SendSMSRequest.md  SendSmsMultiRequest.md
messaging/: __init__.py  bnum.py  exceptions.py  oauth.py  sms.py  subscription.py
mocks/: mocs.py
production-test/: .gitignore  Pipfile  setup.cfg
telstra/: __init__.py
telstramessagingapi/: __init__.py  api_helper.py  configuration.py  decorators.py  telstramessagingapi_client.py
test/: test_auth_api.py  test_authentication_api.py  test_authgeneratetokenpost_response.py  test_delete_number_request.py  test_error_error.py  test_error_error_error.py  test_error_error_error62.py  test_error_error_error_error.py  test_get_mms_response.py  test_get_subscription_response.py  test_health_check_response.py  test_inbound_poll_response.py  test_message.py  test_message_multi.py  test_message_sent_response.py  test_message_sent_response_mms.py  test_message_sent_response_sms.py  test_message_type.py  test_messaging_api.py  test_mms_content.py  (+12 more)
(+152 files in other folders)
