[tool.poetry]
name = "tls.messaging"
version = "0.6.4"
readme = "README.md"
description = "SDK for the Telstra Messaging API"
license = "Apache-2.0"
authors = ["David Andersson <david-andersson@users.noreply.github.com >"]
include = ["tls"]
exclude = ["tests"]
packages = [
    { include = "tls" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
pytest-cov = "^2.10.1"
pytest-randomly = "^3.5.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
