[tool.poetry]
name = "telstra.messaging"
version = "3.1.0"
readme = "README.md"
description = "SDK for the Telstra Messaging API V3 - Beta"
license = "Apache-2.0"
authors = ["David Andersson <david-andersson@users.noreply.github.com >"]
include = ["telstra"]
exclude = ["tests"]
packages = [
    { include = "telstra" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = {version = "^23.1.0", allow-prereleases = true}
pytest-cov = "^4.0.0"
pytest-randomly = "^3.12.0"
pylint = "^2.17.0"
requests = "^2.28.2"
coverage = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --ignore=production-test"
testpaths = [
    "tests",
]
markers = [
    "config",
    "message",
    "numbers",
    "trial_numbers",
    "reports"
]
